--- a/index.html
+++ b/index.html
@@ -1,108 +1,34 @@
-Skip to main content
-Google ClassroomClassroom
-2024 Full Stack DevelopmentMay - Full Stack Developer
-Home
-Calendar
-Enrolled
-To do
-2
-2024 Full Stack Development
-May - Full Stack Developer
-Archived classes
-Settings
-Bootstrap Assignment
-Assignment details
-Bootstrap Assignment
-Kago Kgolagano Kola
-•
-3 Jul (Edited 3 Jul)
-30 points
-Due 21 Jul
-Create a responsive webpage using Bootstrap that includes a navigation bar, a hero section, an about section, a services
-section, and a contact form.
-
-Navigation Bar (5):
-
-A responsive navbar with links to "Home," "About," "Services," and "Contact" sections.
-The navbar should collapse into a hamburger menu on smaller screens.
-
-Hero Section (5):
-
-A jumbotron with a welcoming message and a call-to-action button.
-The button should link to the "About" section.
-
-About Section (5):
-
-A section with a heading and some descriptive text about the website or business.
-An image that complements the text.
-
-
-
-Services Section (5):
-
-A section with a heading and three cards, each describing a different service.
-Each card should have a title and a short description.
-
-Contact Section (5):
-
-A contact form with fields for name, email, and message.
-A submit button to send the form.
-
-Footer (5):
-
-A simple footer with copyright information.
-
-Attached on the assignment is a template HTML file you will use to complete the assignment. I have also attached
-screenshots to provide a visual aid of how the website should generally look like/behave.
-Aid1.png
-Image
-aid2.png
-Image
-/30
-/5
-/5
-/5
-/5
-/5
-/5
-Class comments
-Your work
-Assigned
-John Matthew Ferreira - index.html
-HTML
-Private comments
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Webpage Assignment</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>My Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav>
-        <a href="#">My Website</a>
-        <button type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span></span>
+    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-gradient bg-dark ps-3 pe-3">
+        <a class="navbar-brand" href="#">My Website</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div>
-            <ul>
-                <li>
-                    <a href="#home">Home</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#home">Home</a>
                 </li>
-                <li>
-                    <a href="#about">About</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
                 </li>
-                <li>
-                    <a href="#services">Services</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
                 </li>
-                <li>
-                    <a href="#contact">Contact</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
