--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
     </nav>
 
     <!-- Hero Section -->
-    <div>
-        <div>
-            <h2>Welcome to My Website</h2>
-            <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
-                content or information.</p>
-            <a href="#about" role="button">Learn more</a>
+    <!-- Jumbotron class has been removed by Bootstrap in favour of these utilites -->
+
+    <div class="bg-dark-subtle d-flex justify-content-center">
+        <div class="p-5 mb-4">
+            <h2 class="display-5">Welcome to Our Website</h2>
+            <p class="lead">We're thrilled to have you here! Discover more about what we do and how we can help you
+                achieve your goals.</p>
+            <a class="text-black" href="#about" role="button">Learn more</a>
         </div>
     </div>
 
