Completed about us section

--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
     </div>
 
     <!-- About Section -->
-    <section>
-        <div>
-            <div>
-                <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum
-                    vestibulum.</p>
-            </div>
-            <div>
-                <img src="https://via.placeholder.com/500x300" alt="About Us">
+    <section id="about" class="py-5 bg-dark text-white bg-opacity-75">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>About Us</h2>
+                    <p>Welcome to our website! We are dedicated to providing quality products and excellent service to
+                        our customers.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="https://via.placeholder.com/500x300" alt="About Me" class="img-fluid">
+                </div>
             </div>
         </div>
     </section>
