Completed services section

--- a/index.html
+++ b/index.html
@@ -63,26 +63,32 @@
     </section>
 
     <!-- Services Section -->
-    <section>
-        <div>
-            <h2>Our Services</h2>
-            <div>
-                <div>
-                    <div>
-                        <h5>Service 1</h5>
-                        <p>Description of Service 1.</p>
+    <section id="services" class="py-5 bg-dark text-white bg-opacity-50">
+        <div class="container">
+            <h2 class="text-center mb-4">Our Services</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Service 1</h5>
+                            <p class="card-text">Description of Service 1.</p>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <div>
-                        <h5>Service 2</h5>
-                        <p>Description of Service 2.</p>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Service 2</h5>
+                            <p class="card-text">Description of Service 2.</p>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <div>
-                        <h5>Service 3</h5>
-                        <p>Description of Service 3.</p>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Service 3</h5>
+                            <p class="card-text">Description of Service 3.</p>
+                        </div>
                     </div>
                 </div>
             </div>
