--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assests">
+    <link rel="shortcut icon" href="assests/Page-icon.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -38,11 +40,11 @@
     <!-- Jumbotron class has been removed by Bootstrap in favour of these utilites -->
 
     <div class="bg-dark-subtle d-flex justify-content-center">
-        <div class="p-5 mb-4">
+        <div class="container p-5 ps-3 mb-4">
             <h2 class="display-5">Welcome to Our Website</h2>
             <p class="lead">We're thrilled to have you here! Discover more about what we do and how we can help you
                 achieve your goals.</p>
-            <a class="text-black" href="#about" role="button">Learn more</a>
+            <a class="text-white btn btn-dark py-2" href="#about" role="button">Learn more</a>
         </div>
     </div>
 
@@ -52,11 +54,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2>About Us</h2>
-                    <p>Welcome to our website! We are dedicated to providing quality products and excellent service to
-                        our customers.</p>
+                    <p>Our company specializes in designing, developing, and maintaining websites and web applications.
+                        Our services typically include front-end, back-end, and full-stack development; web design;
+                        website optimization; security; and upgrades and technical support.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="https://via.placeholder.com/500x300" alt="About Me" class="img-fluid">
+                    <img src="assests/Stock-picture.jpg" alt="About Me"
+                        class="img-fluid border border-dark border-opacity-75">
                 </div>
             </div>
         </div>
@@ -65,29 +69,76 @@
     <!-- Services Section -->
     <section id="services" class="py-5 bg-dark text-white bg-opacity-50">
         <div class="container">
-            <h2 class="text-center mb-4">Our Services</h2>
+            <h2 class="text-center mb-4 fw-semibold">Our Services</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Service 1</h5>
-                            <p class="card-text">Description of Service 1.</p>
+                            <h5 class="card-title fw-semibold"><svg xmlns="http://www.w3.org/2000/svg" width="20"
+                                    height="20" fill="rgb(246,97,53)" class="bi bi-check-square-fill"
+                                    viewBox="0 0 16 16">
+                                    <path
+                                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
+                                </svg> Custom Web Application Development</h5>
+                            <p class="card-text">IoT apps. Customer relationship
+                                management (CRM) systems. Social
+                                networking platforms. Data visualization tools. These are just a few examples of the
+                                many types of custom web apps we interact with every day.
+                                <br>
+                                <br>
+                                We deliver a variety of custom web development projects, from enterprise resource
+                                planning (ERP) systems to SaaS applications. We use a range of tools depending on the
+                                requirements, such as JavaScript, HTML, and CSS for front-end development; Python, Ruby,
+                                and PHP for back-end development; and database technologies like MySQL.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Service 2</h5>
-                            <p class="card-text">Description of Service 2.</p>
+                            <h5 class="card-title fw-semibold"><svg xmlns="http://www.w3.org/2000/svg" width="20"
+                                    height="20" fill="rgb(246,97,53)" class="bi bi-check-square-fill"
+                                    viewBox="0 0 16 16">
+                                    <path
+                                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
+                                </svg> eCommerce Development</h5>
+                            <p class="card-text">Create user-friendly storefronts that provide enjoyable shopping
+                                experiences. Incorporate payment processing systems, customer service chatbots, checkout
+                                systems, and more.
+                                <br>
+                                <br>
+                                Leveraging e-commerce platforms like Magento and Shopify, along with languages and tools
+                                such as JavaScript, Python, and Ruby on Rails, our web developers build appealing and
+                                intuitive online stores. We also focus on creating easy-to-navigate user interfaces and
+                                responsive designs to ensure your site is consistent across devices, including mobile
+                                platforms.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Service 3</h5>
-                            <p class="card-text">Description of Service 3.</p>
+                            <h5 class="card-title fw-semibold"><svg xmlns="http://www.w3.org/2000/svg" width="20"
+                                    height="20" fill="rgb(246,97,53)" class="bi bi-check-square-fill"
+                                    viewBox="0 0 16 16">
+                                    <path
+                                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
+                                </svg> API Development and Integration</h5>
+                            <p class="card-text">When you access location-based services, make purchases on e-commerce
+                                websites, or book flights online, that's all thanks to APIs.
+                                <br>
+                                <br>
+                                Application Programming Interfaces are central to many of the services we use every day,
+                                sharing and communicating data seamlessly among apps.
+                                <br>
+                                <br>
+                                We develop and integrate a variety of APIs into your web applications using frameworks
+                                such as Express, Django, Ruby on Rails, and ASP.NET Web API.
+                                <br> We also rigorously test
+                                your APIs with tools like Postman, Insomnia, and SoapUI.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -96,7 +147,7 @@
     </section>
 
     <!-- Contact Section -->
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
         <h2 class="text-start mb-2 fw-semibold">Contact Us</h2>
         <form>
             <div class="row">
@@ -117,16 +168,22 @@
         </form>
     </div>
 
+
     <!-- Footer -->
-    <footer>
+    <footer class="bg-light bg-gradient text-dark py-3 d-flex justify-content-center">
         <div>
-            <p>&copy; 2024 My Website. All rights reserved.</p>
+            <p class="d-flex align-items-center m-0">&copy; 2024 My Website. All rights reserved.</p>
         </div>
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 
-John Matthew Ferreira - index.html
-Displaying John Matthew Ferreira - index.html.
+</body>
+
+</html>
